her seferinde aynı değerleri almak için seed oluşturuldu.

--- a/main.ipynb
+++ b/main.ipynb
@@ -14,7 +14,20 @@
     "import os\n",
     "from torch.utils.data import DataLoader\n",
     "import torch.optim as optim\n",
-    "from dataset.tartanair import TartanAirDataset \n"
+    "from dataset.tartanair import TartanAirDataset\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "def set_seed(seed):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "seed = 42\n",
+    "set_seed(seed)"
    ]
   },
   {
