--- a/main.ipynb
+++ b/main.ipynb
@@ -102,7 +102,7 @@
       "  warnings.warn(\"xFormers is not available (Attention)\")\n",
       "C:\\Users\\emircan/.cache\\torch\\hub\\facebookresearch_dinov2_main\\dinov2\\layers\\block.py:40: UserWarning: xFormers is not available (Block)\n",
       "  warnings.warn(\"xFormers is not available (Block)\")\n",
-      "C:\\Users\\emircan\\AppData\\Local\\Temp\\ipykernel_3084\\4256205414.py:6: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\emircan\\AppData\\Local\\Temp\\ipykernel_5240\\4256205414.py:6: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  checkpoint = torch.load(posenet_path, map_location=device)\n"
      ]
     }
@@ -222,37 +222,44 @@
     "        B, _, H, W = img_pair_shape\n",
     "        A, B_mat = self.construct_A_B(H, W, device)  # [H*W, 2, 3]\n",
     "\n",
+    "        # Gradients x ve y'yi ayır ve [B, H*W, 2] şekline getir\n",
     "        grad_x, grad_y = grad_dirs[:, 0, :, :], grad_dirs[:, 1, :, :]\n",
     "        gx = torch.stack([grad_x, grad_y], dim=-1).view(B, H * W, 2)  # [B, H*W, 2]\n",
-    "        gx_unit = F.normalize(gx, dim=-1)  # [B, H*W, 2]\n",
+    "        gx_unit = F.normalize(gx, dim=-1)  # Birim vektörler [B, H*W, 2]\n",
     "\n",
-    "        # Reshape predicted normal flow vector to [B, H*W, 2]\n",
+    "        # Normal flow tahminini [B, H*W, 2] şekline getir\n",
     "        nf = n_flow_pred.permute(0, 2, 3, 1).reshape(B, H * W, 2)  # [B, H*W, 2]\n",
     "\n",
-    "        # Pose splits (translation and rotation)\n",
+    "        # Pose vektörlerini çevirme (translation) ve dönme (rotation) olarak ayır\n",
     "        V_r, Omega_r = Per[:, :, :3], Per[:, :, 3:]  # [B, 3]\n",
     "        V_c, Omega_c = Pec[:, :, :3], Pec[:, :, 3:]  # [B, 3]\n",
     "\n",
-    "        # Project A and B matrices along gradient directions\n",
+    "        # A ve B matrislerini gradyan yönlerine projekte et\n",
     "        gA = torch.einsum('bpi,pij->bpj', gx_unit, A)      # [B, H*W, 3]\n",
     "        gB = torch.einsum('bpi,pij->bpj', gx_unit, B_mat)  # [B, H*W, 3]\n",
     "\n",
-    "        # Compute depth scale from Per\n",
+    "        # Derinlik ölçeğini Per'den hesapla\n",
     "        g_dot_B_Omega_r = torch.sum(gB * Omega_r.unsqueeze(1), dim=-1)  # [B, H*W]\n",
     "        g_dot_A_V_r = torch.sum(gA * V_r.unsqueeze(1), dim=-1)          # [B, H*W]\n",
     "        n_flow_scalar = torch.norm(nf, dim=-1)                          # [B, H*W]\n",
     "\n",
-    "        denom = n_flow_scalar - g_dot_B_Omega_r + 1e-6  # for stability\n",
-    "        depth_scale = g_dot_A_V_r / denom  # [B, H*W]\n",
+    "        denom = n_flow_scalar - g_dot_B_Omega_r  # Stabilite için payda\n",
+    "        depth_scale = g_dot_A_V_r / (denom + 10e-6)        # [B, H*W]\n",
     "\n",
-    "        # Reconstruct normal flow vectors using direction and estimated depth\n",
-    "        flow_from_pose = gx_unit * depth_scale.unsqueeze(-1)  # [B, H*W, 2]\n",
+    "        # Pec'den benzer hesaplamalar\n",
+    "        g_dot_A_V_c = torch.sum(gA * V_c.unsqueeze(1), dim=-1)\n",
+    "        g_dot_B_Omega_c = torch.sum(gB * Omega_c.unsqueeze(1), dim=-1)\n",
     "\n",
-    "        # Reshape back to image format\n",
-    "        flow_from_pose_2d = flow_from_pose.view(B, H, W, 2).permute(0, 3, 1, 2)  # [B, 2, H, W]\n",
+    "        # Derinlik ile normal flow tahmini yeniden oluşturuluyor\n",
+    "        flow_from_pose = g_dot_A_V_c / depth_scale  # [B, H*W, 2]\n",
+    "        flow_from_pose = flow_from_pose + g_dot_B_Omega_c         # [B, H*W, 2]\n",
     "\n",
-    "        # Compute MSE loss between predicted normal flow and one reconstructed from Pec+Per\n",
-    "        loss = F.mse_loss(flow_from_pose_2d, n_flow_pred)\n",
+    "        print(flow_from_pose.shape)\n",
+    "\n",
+    "\n",
+    "        # Tahmin edilen normal flow ile rekonstrüksiyon arasındaki MSE kaybını hesapla\n",
+    "        loss = F.mse_loss(flow_from_pose, n_flow_scalar)\n",
+    "\n",
     "        return loss\n",
     "\n",
     "\n",
@@ -376,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +428,23 @@
       "torch.Size([1, 2, 478, 638])\n",
       "Refined Pose:\n",
       "tensor([[[ 3.8700e-02, -2.0090e-01,  5.0100e-02, -1.5045e-07, -1.1198e-02,\n",
-      "           3.1416e+00]]], device='cuda:0', grad_fn=<CatBackward0>)\n"
+      "           3.1416e+00]]], device='cuda:0', grad_fn=<CatBackward0>)\n",
+      "torch.Size([1, 1, 304964])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "shape '[1, 478, 638, 2]' is invalid for input of size 304964",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(rotvec_flat)\n\u001b[0;32m     16\u001b[0m images \u001b[38;5;241m=\u001b[39m images\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m---> 17\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mcheirality_layer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimages\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m     19\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\torch\\nn\\modules\\module.py:1736\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1734\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1735\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1736\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\torch\\nn\\modules\\module.py:1747\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1742\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1743\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1744\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1745\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1746\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1747\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1749\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1750\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
+      "Cell \u001b[1;32mIn[5], line 226\u001b[0m, in \u001b[0;36mCheiralityLayer.forward\u001b[1;34m(self, img_pair)\u001b[0m\n\u001b[0;32m    224\u001b[0m Per \u001b[38;5;241m=\u001b[39m Pec\n\u001b[0;32m    225\u001b[0m \u001b[38;5;28mprint\u001b[39m(Per)\n\u001b[1;32m--> 226\u001b[0m upper_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupper_level_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_pair_shape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPec\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnflow_pred\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimage_gradients\u001b[49m\u001b[43m,\u001b[49m\u001b[43mimg_pair\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    227\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUpper level loss:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    228\u001b[0m \u001b[38;5;28mprint\u001b[39m(upper_loss)\n",
+      "Cell \u001b[1;32mIn[5], line 136\u001b[0m, in \u001b[0;36mCheiralityLayer.upper_level_loss\u001b[1;34m(self, img_pair_shape, Pec, Per, n_flow_pred, grad_dirs, device)\u001b[0m\n\u001b[0;32m    134\u001b[0m \u001b[38;5;28mprint\u001b[39m(flow_from_pose\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m    135\u001b[0m \u001b[38;5;66;03m# Görüntü formatına geri çevir\u001b[39;00m\n\u001b[1;32m--> 136\u001b[0m flow_from_pose_2d \u001b[38;5;241m=\u001b[39m \u001b[43mflow_from_pose\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mview\u001b[49m\u001b[43m(\u001b[49m\u001b[43mB\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mpermute(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m)  \u001b[38;5;66;03m# [B, 2, H, W]\u001b[39;00m\n\u001b[0;32m    138\u001b[0m \u001b[38;5;66;03m# Tahmin edilen normal flow ile rekonstrüksiyon arasındaki MSE kaybını hesapla\u001b[39;00m\n\u001b[0;32m    139\u001b[0m loss \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mmse_loss(flow_from_pose_2d, n_flow_pred)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: shape '[1, 478, 638, 2]' is invalid for input of size 304964"
      ]
     }
    ],
